--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
 
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id architecto aperiam ullam repellat, tempore nisi tempora saepe quae asperiores, eligendi eos perferendis odio delectus ratione cum autem error laboriosam! Illo sint veniam repellendus earum ratione quibusdam perferendis odio voluptate eveniet dolores animi iusto nobis dolorum minus eum esse praesentium, sed voluptatibus sequi. Unde facilis deleniti et provident nesciunt optio numquam tempore odio distinctio minima, ab expedita blanditiis omnis ex eos ullam possimus debitis vero cum. Porro explicabo placeat quis provident quas exercitationem distinctio a aliquam illo nihil error libero laudantium natus numquam quidem aspernatur perferendis magnam hic, id soluta?</p>
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id architecto aperiam ullam repellat, tempore nisi tempora saepe quae asperiores, eligendi eos perferendis odio delectus ratione cum autem error laboriosam! Illo sint veniam repellendus earum ratione quibusdam perferendis odio voluptate eveniet dolores animi iusto nobis dolorum minus eum esse praesentium, sed voluptatibus sequi. Unde facilis deleniti et provident nesciunt optio numquam tempore odio distinctio minima, ab expedita blanditiis omnis ex eos ullam possimus debitis vero cum. Porro explicabo placeat quis provident quas exercitationem distinctio a aliquam illo nihil error libero laudantium natus numquam quidem aspernatur perferendis magnam hic, id soluta?</p> -->
     </main>
 
     <%- include('../partials/footer.ejs')  %>
