--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -6,13 +6,13 @@
    <%- include('../partials/nav.ejs') %>
 
     <main class="container">
-        <form action="">
+        <form action="/api/v1/create" method="post">
             <label for="name">Name:</label>
-            <input type="text" id="name"><br><br>
+            <input type="text" id="name" name="name"><br><br>
             <label for="title">Title:</label>
-            <input type="text" id="title"><br> <br>
+            <input type="text" id="title" name="title"><br> <br>
             <label for="task">Task:</label>
-            <textarea id="task" cols="30" rows="10"></textarea><br><br>
+            <textarea id="task" cols="30" rows="10" name="task"></textarea><br><br>
             <button>Submit</button>
 
         </form>
