--- a/views/singlepage.ejs
+++ b/views/singlepage.ejs
@@ -8,9 +8,9 @@
     <main class="container">
 
         <div>
-          <h1><%- task.name %></h1>
-          <h2> <%- task.title  %> </h2>
-          <p> <%- task.task  %> </p>
+          <h1> Name: <%- task.name %></h1>
+          <h2> Title: <%- task.title  %> </h2>
+          <p>Task: <%- task.task  %> </p>
           <div>
             <button>
               
