--- a/views/singlepage.ejs
+++ b/views/singlepage.ejs
@@ -11,6 +11,7 @@
           <h1> Name: <%= task.name %></h1>
           <h2> Title: <%= task.title  %> </h2>
           <p>Task: <%= task.task  %> </p>
+          <p>Created: <%= task.createdAt  %>  </p>
           <div>
             <button>
               
