--- a/views/singlepage.ejs
+++ b/views/singlepage.ejs
@@ -15,10 +15,10 @@
           <div>
             <button>
               
-              <a href="/api/v1/delete/<%- task._id %>">delete task</a>
+              <a href="/api/v1/delete/<%= task._id %>">delete task</a>
             </button>
             <button>
-              <a href="/api/v1/editpage/<%- task._id %>">
+              <a href="/api/v1/editpage/<%= task._id %>">
                 edit task
               </a>
             </button>
