--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,37 @@
-.container{
-    width: 90%;
-    margin: auto;
-   }
-   nav{
-    display: flex;
-    justify-content: space-between;
-   }
-   a{
+.container {
+  width: 90%;
+  margin: auto;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid red;
+}
+a {
     text-decoration: none;
-   }
-   li{
+}
+li {
     list-style: none;
-   }
-   ul{
+}
+ul {
     display: flex;
     gap: 2rem;
-   }
-   /* form style */
-   form{
+}
+/* form style */
+form {
     width: 60%;
     margin: auto;
-   }
-   form button{
+}
+form button {
     background-color: blue;
     color: white;
-    width:30% ;
+    width: 30%;
     height: 30px;
     font-size: 1rem;
-   }
+}
+
+footer{
+    text-align: center;
+    /* border-top: 1px solid red; */
+    
+}
